Fixed aside toggle-off on mobile devices

--- a/contacts/src/App.css
+++ b/contacts/src/App.css
@@ -11,17 +11,26 @@
   min-width: 100%;
   grid-template-rows: 100px 1fr 90px;
   grid-template-columns: 1fr;
-  grid-template-areas: "header" "sidebar" "content" "footer";
+  grid-template-areas: "header"
+    "content"
+    "footer";
 }
 
 .header {
   background-color: yellow;
   grid-area: header;
 }
+
 .aside {
   background-color: red;
   grid-area: sidebar;
 }
+
+.aside * {
+  display: none;
+
+}
+
 .main {
   grid-area: content;
 }
@@ -30,6 +39,7 @@
   background-color: gray;
   grid-area: footer;
 }
+
 @media only screen and (min-width: 600px) {
   .app {
     grid-template-columns: 200px 1fr;
@@ -37,5 +47,17 @@
       "header header"
       "sidebar content"
       "footer footer";
+  }
+
+
+
+  .aside * {
+    display: block
+  }
+
+  .aside {
+    display: grid;
+    background-color: red;
+
   }
 }
